--- a/naan/.env.example
+++ b/naan/.env.example
@@ -1,5 +1,5 @@
 MACHINE_TOKEN="meh"
 AUTH_SECRET="hehe"
-DAUTH_CLIENT_SECRET="get from https://auth.delta.nitt.edu/client-manager"
-DAUTH_CLIENT_ID="get from https://auth.delta.nitt.edu/client-manager"
+DAUTH_CLIENT_SECRET="   yoo"
+DAUTH_CLIENT_ID="yooo"
 NEXT_PUBLIC_GRAPHQL_API_URL="http://localhost:8080/query"
