--- a/naan/package.json
+++ b/naan/package.json
@@ -24,10 +24,12 @@
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "next-auth": "^5.0.0-beta.30",
+    "next-themes": "^0.4.6",
     "postcss": "^8.5.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.71.1",
+    "rehype-slug": "^6.0.0",
     "remark-breaks": "^4.0.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18"
