--- a/naan/tsconfig.json
+++ b/naan/tsconfig.json
@@ -29,6 +29,6 @@
     ".next/types/**/*.ts",
     ".next/dev/types/**/*.ts",
     "**/*.mts"
-  ],
+, "src/components/ChatFAB.jsx"  ],
   "exclude": ["node_modules"]
 }
