--- a/gravy/docker-compose.yml
+++ b/gravy/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - MEILI_MASTER_KEY=blablablablablablablablablablablablabla
 
   mongodb:
-    image: mongo:latest
+    image: mongo:8.2.4
     restart: unless-stopped
     ports:
       - "27017:27017"
