--- a/naan/.env.example
+++ b/naan/.env.example
@@ -3,3 +3,4 @@ AUTH_SECRET="hehe"
 DAUTH_CLIENT_SECRET="   yoo"
 DAUTH_CLIENT_ID="yooo"
 NEXT_PUBLIC_GRAPHQL_API_URL="http://localhost:8080/query"
+NEXT_PUBLIC_CHAT_API_URL="http://localhost:8000"
